[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["DimitriChauvel <chauvel.dimitri@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pylint = "^3.3.1"
black = "^24.10.0"
pytest = "^8.3.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
