[tool.poetry]
name = "PyRSS"
version = "0.1.0"
description = ""
authors = ["DimitriChauvel <chauvel.dimitri@posteo.net>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.12.0"
black = "^24.10.0"
pytest = "^8.3.3"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[tool.poetry.scripts]
start = "src.main:main"
lint-fix = "scripts:lint_fix"
lint = "scripts:lint"
tests = "scripts:tests"
